# volc-openapi-demos

./: .gitignore  LICENSE  README.md
ruby/: sign.rb
signature/: sign.py
signature/cpp/: CMakeLists.txt  sign.cpp
signature/csharp/: Program.cs
signature/golang/: sign.go
signature/java/: Sign.java
signature/java_jdk8/: Sign.java
signature/nodejs/: package.json  sign-web.ts  sign.d.ts  sign.js  sign.ts
signature/perl/: sign.pl
signature/php/: sign.php
signature/python/: sign.py
signature/ruby/: sign.rb
signature/rust/: Cargo.toml
signature/rust/src/: main.rs
signature/shell/: sign.sh
